--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,5 +1,7 @@
 
-
+.heading{
+    font-size: 250%;
+}
 
 
 
@@ -28,6 +30,20 @@
     height:300px;
     border-radius:5%;
 }
+
+
+@media (min-width: 576px) {
+    .profile-width{
+        width:50%;
+        float:left;
+        padding:0% 3%;
+        justify-content: center;
+    }
+    .align{
+        padding: 20% 5%;
+    }
+ }
+
 
 
 
