--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,7 +2,9 @@
 .heading{
     font-size: 250%;
 }
-
+.style-header{
+    margin-bottom: 250px;
+}
 
 
 .color-1{
@@ -30,7 +32,9 @@
     height:300px;
     border-radius:5%;
 }
-
+.style-1{
+    margin-top: 20%;
+}
 
 @media (min-width: 576px) {
     .profile-width{
@@ -38,13 +42,33 @@
         float:left;
         padding:0% 3%;
         justify-content: center;
+        height:550px
+        
     }
     .align{
         padding: 20% 5%;
     }
+    .design{
+        width:50%;
+        float:left;
+        transform:scale(0.60)
+    }
+    .design-2{
+       height: 300px ;
+    }
+    #special{
+        position:absolute;
+        left: 50%;
+        transform: scale(0.8)
+        align-items:center;
+    }
+ }
+ 
+ .padding{
+     padding:0% 20%
  }
 
-
+ 
 
 
 
