--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,12 +1,14 @@
-
 .heading{
-    font-size: 250%;
+    font-size: 50px;
 }
-.style-header{
-    margin-bottom: 250px;
+.card-height{
+    height:270px;
 }
-
-
+.img-width{
+    width:95%;
+    border-radius: 5%;
+    
+}
 .color-1{
     color:#fd7e14;
 }
@@ -26,48 +28,30 @@
 .color-6{
     color:#96b032;
 }
-.img-width{
-    margin: auto;
-    width:95%;
-    height:300px;
-    border-radius:5%;
-}
-.style-1{
-    margin-top: 20%;
-}
-
 @media (min-width: 576px) {
     .profile-width{
         width:50%;
         float:left;
-        padding:0% 3%;
-        justify-content: center;
-        height:550px
-        
+        display:flex;
+        align-items: center;
+        height: 600px;
     }
-    .align{
-        padding: 20% 5%;
-    }
-    .design{
+}
+@media (min-width: 768px) {
+    .profile-width{
         width:50%;
         float:left;
-        transform:scale(0.60)
     }
-    .design-2{
-       height: 300px ;
-    }
-    #special{
-        position:absolute;
-        left: 50%;
-        transform: scale(0.8)
-        align-items:center;
+    .heading{
+        font-size:60px
     }
  }
- 
- .padding{
-     padding:0% 20%
- }
-
+@media (min-width: 992px) {
+    .profile-width{
+        width:50%;
+        float:left;
+    }
+}
  
 
 
