--- a/CSS/style.css
+++ b/CSS/style.css
@@ -7,7 +7,6 @@
 .img-width{
     width:95%;
     border-radius: 5%;
-    
 }
 .color-1{
     color:#fd7e14;
@@ -19,14 +18,22 @@
     background-color: rgb(238, 234, 234);
 }
 .color-4{
-    background-color:#96b032;
-    background-image: linear-gradient(180deg,#96b032,#637713);
+    background-color:#b06b32e8;
+    background-image: linear-gradient(180deg,#b08e32,#a7580f);
 }
 .color-5{
     background-color: rgb(216, 209, 200);
 }
 .color-6{
     color:#96b032;
+}
+.margin-size{
+    margin: 50px 0;
+    padding: 30px 0;
+    border-radius: 5%;
+}
+.specify{
+    height:350px;
 }
 @media (min-width: 576px) {
     .profile-width{
@@ -38,19 +45,33 @@
     }
 }
 @media (min-width: 768px) {
-    .profile-width{
-        width:50%;
-        float:left;
+     .grp{
+         width:50%;
+         float:left;
+     }
+     .bdy{
+         height:200px;
     }
-    .heading{
-        font-size:60px
-    }
+     .design{
+         width:50%;
+         position:absolute;
+         left:50%;
+         
+     }
+     .total-body{
+         transform: scale(0.5);
+         position:relative;
+         left:-35%;
+         
+     }
+     .txt{
+         text-align: left !important;
+     }
  }
-@media (min-width: 992px) {
-    .profile-width{
-        width:50%;
-        float:left;
-    }
+
+footer{
+    display:block;
+
 }
  
 
